Refdoc: Fixed the bug where the menu got duplicate entries when the cache had expired. Fixed the bug where the scroll got stuck if the main content area was shorter than the window height but the navigation menu taller than the window height.

--- a/refdoc/structure/modref.css
+++ b/refdoc/structure/modref.css
@@ -352,7 +352,7 @@ ul.multicol a {
 }
 ul.multicol a:hover {
 	text-decoration: none;
-	font-weight: bold;
+	// font-weight: bold;
 	-webkit-backface-visibility: hidden;
 }
 
